--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.5"
 
 services:
   app:
@@ -6,51 +6,45 @@ services:
       context: ./vm/php
       dockerfile: Dockerfile
     #    image: haroldcris/php7.4
-    container_name: app
+    container_name: ${APP_NAME}-php7
     restart: unless-stopped
     volumes:
       - ./vm/php/local.ini:/usr/local/etc/php/conf.d/local.ini
       - ./src:/var/www
-    networks:
-      - mynetwork
+
 
   webserver:
     image: nginx
-    container_name: mynginx
+    container_name: ${APP_NAME}-nginx
     restart: always
     ports:
-      - 8000:80
-      - 443:443
+      - ${APP_PORT}:80
+      # - 443:443
     volumes:
       - ./vm/nginx/conf.d:/etc/nginx/conf.d/
       - ./src:/var/www
-    networks:
-      - mynetwork
+
 
   adminer:
-    image: adminer
-    container_name: myadminer
+    image: adminer:latest
+    container_name: ${APP_NAME}-adminer
     restart: always
     ports:
-      - 9000:8080
-    networks:
-      - mynetwork
+      - ${ADMINER_PORT}:8080
+
 
   db:
     image: mariadb
-    container_name: mymariadb
+    container_name: ${APP_NAME}-mariadb
     restart: always
     environment:
-      MYSQL_DATABASE: test
-      MYSQL_ROOT_PASSWORD: secret
       SERVICE_NAME: mariadb
+      MYSQL_DATABASE: test
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
       TZ: Asia/Manila
     volumes:
       - ./vm/mysql/my.cnf:/etc/mysql/my.cnf
       - ./db:/var/lib/mysql
-    networks:
-      - mynetwork
-
-networks:
-  mynetwork:
-    driver: bridge
