--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./vm/php
       dockerfile: Dockerfile
-    #    image: haroldcris/php7.4
+    image: haroldcris/php7.4
     container_name: ${APP_NAME}-php7
     restart: unless-stopped
     volumes:
