--- a/vm/php/Dockerfile
+++ b/vm/php/Dockerfile
@@ -12,13 +12,37 @@ RUN apt-get update && apt-get install -y \
     libonig-dev \
     libxml2-dev \
     zip \
-    unzip
+    unzip  \
+    gnupg
+
 
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd  
+RUN docker-php-ext-install pdo pdo_mysql mbstring exif pcntl bcmath gd    
+
+RUN pecl install redis-5.1.0
+
+
+
+ENV ACCEPT_EULA=Y
+
+# Microsoft SQL Server Prerequisites
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+    && curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list \
+    && apt-get install -y --no-install-recommends \
+        apt-transport-https \
+    && apt-get update \
+    && apt-get -y --no-install-recommends install \
+        unixodbc-dev \
+        msodbcsql17
+
+RUN pecl install sqlsrv pdo_sqlsrv xdebug \
+    && docker-php-ext-enable sqlsrv pdo_sqlsrv xdebug
+
+
+
 
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
@@ -36,7 +60,6 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # # Expose port 9000 and start php-fpm server
 # EXPOSE 9000
 # CMD ["php-fpm"]
-
 
 
 
