--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     # build:
     #   context: ./vm/php
     #   dockerfile: Dockerfile
-    image: haroldcris/php8.0:v1
+    image: haroldcris/php8.0:latest
     container_name: ${APP_NAME}-php8
     restart: unless-stopped
     volumes:
