--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ MYSQL_ROOT_PASSWORD=secret
 DB_USERNAME=sqluser
 DB_PASSWORD=secret
 DB_DATABASE=app
+
+
+# Get your Token by signing at from https://dashboard.ngrok.com/signup
+NGROK_TOKEN=6RUPBhzoTuc4iXJn8P5Xw_4XBsnr4pKf6EcBcJWPXcN
+NGROK_PORT=4040
