Updated to Php8.2

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_NAME=myapp
-APP_PORT=8000
+APP_PORT=8000                   # Port use to access the application
 
-ADMINER_PORT=9000
+ADMINER_PORT=8001               # Port use to access Adminer
 
-MYSQL_ROOT_PASSWORD=secret
+MYSQL_ROOT_PASSWORD=secret      # MySQL Root Password 
 
-DB_USERNAME=sqluser
-DB_PASSWORD=secret
-DB_DATABASE=app
+                                # When the container is created it will create a new Database with this settings
+DB_DATABASE=app                 # Name of your database that will be created when the container is created
+DB_USERNAME=sqluser             # Username of the database
+DB_PASSWORD=secret              #
