--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,49 +1,49 @@
 version: "3.5"
 
 services:
-  app:
-    # build:
-    #   context: ./vm/php
-    #   dockerfile: Dockerfile
-    image: haroldcris/php8:latest
-    container_name: ${APP_NAME}-php8
+  app: # <-- You can name this whatever you want, but you will have to change the /vm/ngix/conf.d/default.conf
+    image: haroldcris/php8.2.4
+    container_name: php
     restart: unless-stopped
     volumes:
-      - ./vm/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-      - ./code:/var/www
+      - .\vm\php\local.ini:/usr/local/etc/php/conf.d/local.ini
+      - .\code:/var/www
+    #build:
+    #  context: ./vm/php
+    #  dockerfile: Dockerfile
 
 
-  webserver:
+  webserver:  # <-- You can name this whatever you want
     image: nginx
-    container_name: ${APP_NAME}-nginx
+    container_name: nginx
     restart: unless-stopped
     ports:
       - ${APP_PORT}:80
-      # - 443:443
     volumes:
-      - ./vm/nginx/conf.d:/etc/nginx/conf.d/
-      - ./code:/var/www
+      - .\vm\nginx\conf.d:/etc/nginx/conf.d/
+      - .\code:/var/www
+      
 
 
-  adminer:
+  adminer: # <-- You can name this whatever you want
     image: adminer:latest
-    container_name: ${APP_NAME}-adminer
+    container_name: adminer
     restart: unless-stopped
     ports:
       - ${ADMINER_PORT}:8080
 
 
-  db:
+
+  db: # <-- You can name this whatever you want, this will be the server name when accessing SQL from Adminer
     image: mariadb
-    container_name: ${APP_NAME}-mariadb
+    container_name: mariadb
     restart: unless-stopped
     environment:
       SERVICE_NAME: mariadb
-      MYSQL_DATABASE: test
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_DATABASE}
       TZ: Asia/Manila
     volumes:
       - ./vm/mysql/my.cnf:/etc/mysql/my.cnf
