--- a/vm/nginx/conf.d/default.conf
+++ b/vm/nginx/conf.d/default.conf
@@ -9,8 +9,11 @@ server {
     
     location ~ \.php$ {
         try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+        # Change the 'app' to whatever the name of your 
+        # php container name on your docker-compose file
         fastcgi_pass app:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
